--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/layout_checkout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -50,57 +50,13 @@
                 android:maxLines="5" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.card.MaterialCardView
+        <include
+            android:id="@+id/layout_checkout_payment_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/dp_1"
             android:layout_marginVertical="@dimen/dp_16"
-            android:elevation="@dimen/dp_4"
-            app:shapeAppearanceOverlay="@style/Theme.TailorMade.CornerRounded_16dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/dp_12"
-                android:orientation="vertical">
-
-                <include
-                    android:id="@+id/layout_checkout_total"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    layout="@layout/layout_ordered_total" />
-
-                <View
-                    android:id="@+id/view_checkout_separator"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/dp_1"
-                    android:layout_marginVertical="@dimen/dp_8"
-                    android:background="@color/color_grey_F1F1F1" />
-
-                <GridLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:columnCount="2"
-                    android:rowCount="1"
-                    android:useDefaultMargins="true">
-
-                    <TextView
-                        android:id="@+id/text_view_checkout_payment_total_label"
-                        style="@style/TextAppearance.TailorMade.Caption.BlackHigh"
-                        android:layout_row="0"
-                        android:layout_column="0"
-                        android:text="@string/payment_total_label" />
-
-                    <TextView
-                        android:id="@+id/text_view_checkout_payment_total"
-                        style="@style/TextAppearance.TailorMade.Caption.PrimaryDark.Bold"
-                        android:layout_row="0"
-                        android:layout_column="1"
-                        android:layout_gravity="end"
-                        tools:text="@string/payment_total_label" />
-                </GridLayout>
-            </LinearLayout>
-        </com.google.android.material.card.MaterialCardView>
+            layout="@layout/layout_payment_detail_card" />
 
         <Button
             android:id="@+id/button_checkout_make_order"
