--- a/features/tailormade_chat/src/main/res/layout/layout_card_chat_skeleton.xml
+++ b/features/tailormade_chat/src/main/res/layout/layout_card_chat_skeleton.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:padding="@dimen/dp_16">
 
-    <TextView
+    <View
         android:id="@+id/text_view_chat_name"
         android:layout_width="@dimen/dp_120"
         android:layout_height="@dimen/dp_20"
@@ -14,7 +14,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
+    <View
         android:id="@+id/text_view_chat_content"
         android:layout_width="@dimen/dp_200"
         android:layout_height="@dimen/dp_16"
@@ -24,7 +24,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/text_view_chat_name" />
 
-    <TextView
+    <View
         android:id="@+id/text_view_chat_time"
         android:layout_width="@dimen/dp_64"
         android:layout_height="@dimen/dp_14"
