--- a/features/tailormade_design_detail/src/main/res/layout/fragment_design_detail.xml
+++ b/features/tailormade_design_detail/src/main/res/layout/fragment_design_detail.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_design_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dp_80"
