--- a/libraries/tailormade_dls/src/main/res/values/dimens.xml
+++ b/libraries/tailormade_dls/src/main/res/values/dimens.xml
@@ -19,6 +19,7 @@
 
     <dimen name="dp_600">600dp</dimen>
     <dimen name="dp_400">400dp</dimen>
+    <dimen name="dp_240">240dp</dimen>
     <dimen name="dp_200">200dp</dimen>
     <dimen name="dp_180">180dp</dimen>
     <dimen name="dp_150">150dp</dimen>
