--- a/tailor-app/src/main/res/layout/activity_order_detail.xml
+++ b/tailor-app/src/main/res/layout/activity_order_detail.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/layout_order_detail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
