--- a/tailor-app/src/main/res/layout/layout_card_order_item.xml
+++ b/tailor-app/src/main/res/layout/layout_card_order_item.xml
@@ -15,12 +15,51 @@
         android:layout_height="match_parent"
         android:layout_margin="@dimen/dp_12">
 
+        <TextView
+            android:id="@+id/text_view_order_id_label"
+            style="@style/TextAppearance.TailorMade.Caption.BlackMedium2"
+            android:layout_width="@dimen/dp_0"
+            android:layout_height="wrap_content"
+            android:text="@string/order_id_label"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/text_view_order_id"
+            style="@style/TextAppearance.TailorMade.Caption.BlackHigh"
+            android:layout_width="@dimen/dp_0"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dp_4"
+            app:layout_constraintStart_toEndOf="@id/text_view_order_id_label"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/order_id_label" />
+
+        <TextView
+            android:id="@+id/text_view_order_date"
+            style="@style/TextAppearance.TailorMade.Caption.BlackHigh"
+            android:layout_width="@dimen/dp_0"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dp_4"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/order_date_label" />
+
+        <View
+            android:id="@+id/view_card_separator"
+            android:layout_width="@dimen/dp_0"
+            android:layout_height="@dimen/dp_1"
+            android:layout_marginTop="@dimen/dp_12"
+            android:background="@color/color_black_20"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_view_order_id_label" />
+
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/image_view_ordered"
             android:layout_width="@dimen/dp_64"
             android:layout_height="@dimen/dp_64"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/view_card_separator"
             app:shapeAppearanceOverlay="@style/Theme.TailorMade.CornerRounded_16dp"
             tools:ignore="ContentDescription" />
 
@@ -31,7 +70,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp_12"
             app:layout_constraintStart_toEndOf="@id/image_view_ordered"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/view_card_separator"
             tools:text="@string/ordered_title_label" />
 
         <TextView
