--- a/tailor-app/src/main/res/layout/layout_card_order_item.xml
+++ b/tailor-app/src/main/res/layout/layout_card_order_item.xml
@@ -58,6 +58,7 @@
             android:id="@+id/image_view_ordered"
             android:layout_width="@dimen/dp_64"
             android:layout_height="@dimen/dp_64"
+            android:layout_marginTop="@dimen/dp_12"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/view_card_separator"
             app:shapeAppearanceOverlay="@style/Theme.TailorMade.CornerRounded_16dp"
@@ -69,6 +70,7 @@
             android:layout_width="@dimen/dp_0"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp_12"
+            android:layout_marginTop="@dimen/dp_12"
             app:layout_constraintStart_toEndOf="@id/image_view_ordered"
             app:layout_constraintTop_toBottomOf="@id/view_card_separator"
             tools:text="@string/ordered_title_label" />
