LOADING-STATE: Fix order ui bugs
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/app/src/main/res/layout/fragment_history_detail.xml
+++ b/app/src/main/res/layout/fragment_history_detail.xml
@@ -8,6 +8,7 @@
         android:id="@+id/layout_history_detail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/dp_16"
         android:orientation="vertical"
         tools:context=".feature.history.view.HistoryDetailFragment">
 
