PROFILE-BUGS: Fix container
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -20,13 +20,18 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/nav_host_checkout_fragment"
-        android:name="androidx.navigation.fragment.NavHostFragment"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="@dimen/dp_16"
-        app:defaultNavHost="true"
-        app:navGraph="@navigation/nav_checkout_graph" />
+        android:layout_height="match_parent">
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/nav_host_checkout_fragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/dp_16"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/nav_checkout_graph" />
+    </ScrollView>
 
 </LinearLayout>
