--- a/features/tailormade_design_detail/src/main/res/layout/fragment_add_color_bottom_sheet.xml
+++ b/features/tailormade_design_detail/src/main/res/layout/fragment_add_color_bottom_sheet.xml
@@ -41,8 +41,7 @@
             android:id="@+id/edit_text_color_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
-            android:singleLine="true" />
+            android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.skydoves.colorpickerview.ColorPickerView
