--- a/features/tailormade_profile/src/main/res/layout/fragment_edit_about.xml
+++ b/features/tailormade_profile/src/main/res/layout/fragment_edit_about.xml
@@ -30,7 +30,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edit_text_company_edit_about"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="text" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -47,7 +48,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edit_text_occupation_edit_about"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="text" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -66,6 +68,7 @@
             android:id="@+id/edit_text_occupation_city_edit_about"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxLines="5"
             tools:ignore="LabelFor" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -95,7 +98,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edit_text_school_edit_about"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="text" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -112,7 +116,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edit_text_major_edit_about"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="text" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -131,6 +136,7 @@
             android:id="@+id/edit_text_education_city_edit_about"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxLines="5"
             tools:ignore="LabelFor" />
 
     </com.google.android.material.textfield.TextInputLayout>
