--- a/features/tailormade_profile/src/main/res/layout/fragment_edit_profile.xml
+++ b/features/tailormade_profile/src/main/res/layout/fragment_edit_profile.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -20,7 +19,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edit_text_name_edit_profile"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="text" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -38,7 +38,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edit_text_phone_number_edit_profile"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="phone" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -50,7 +51,7 @@
         android:hint="@string/birth_date_label"
         app:endIconDrawable="@drawable/ic_date"
         app:endIconMode="custom"
-        app:errorEnabled="true"
+        app:errorIconDrawable="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/text_input_phone_number_edit_profile">
@@ -59,7 +60,7 @@
             android:id="@+id/edit_text_birth_date_edit_profile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="date" />
+            android:editable="false" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -68,7 +69,7 @@
         style="@style/Theme.TailorMade.TextInputEditText.Dropdown"
         android:layout_width="@dimen/dp_0"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_12"
+        android:layout_marginTop="@dimen/dp_24"
         android:hint="@string/location_label"
         app:errorEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,6 +80,7 @@
             android:id="@+id/edit_text_location_edit_profile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxLines="5"
             tools:ignore="LabelFor" />
 
     </com.google.android.material.textfield.TextInputLayout>
