--- a/features/tailormade_chat/src/main/res/layout/fragment_chat_list.xml
+++ b/features/tailormade_chat/src/main/res/layout/fragment_chat_list.xml
@@ -10,6 +10,7 @@
         android:id="@+id/recycler_view_chat_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/dp_72"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
