--- a/features/tailormade_auth/src/main/res/navigation/nav_auth_graph.xml
+++ b/features/tailormade_auth/src/main/res/navigation/nav_auth_graph.xml
@@ -29,13 +29,5 @@
     <fragment
         android:id="@+id/selectGenderFragment"
         android:name="com.future.tailormade_auth.feature.signUp.view.SelectGenderFragment"
-        android:label="SelectGenderFragment">
-        <action
-            android:id="@+id/action_selectGenderFragment_to_selectRoleFragment"
-            app:destination="@id/selectRoleFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/selectRoleFragment"
-        android:name="com.future.tailormade_auth.feature.signUp.view.SelectRoleFragment"
-        android:label="SelectRoleFragment" />
+        android:label="SelectGenderFragment"/>
 </navigation>
