FIX-SELECT-GENDER: Fix layout bugs
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/libraries/tailormade_dls/src/main/res/values/styles.xml
+++ b/libraries/tailormade_dls/src/main/res/values/styles.xml
@@ -139,14 +139,14 @@
 
     <!-- Radio Button Style -->
     <style name="Theme.TailorMade.RadioImageButton">
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_width">111dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:button">@null</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:drawablePadding">@dimen/dp_24</item>
         <item name="android:layout_marginStart">@dimen/dp_16</item>
         <item name="android:layout_marginEnd">@dimen/dp_16</item>
-        <item name="android:textAppearance">@style/TextAppearance.TailorMade.Subtitle1</item>
+        <item name="android:textAppearance">@style/TextAppearance.TailorMade.Subtitle1.BlackMedium</item>
     </style>
 
     <!-- Text colors style -->
