--- a/features/tailormade_design_detail/src/main/res/layout/layout_design_detail_general_info.xml
+++ b/features/tailormade_design_detail/src/main/res/layout/layout_design_detail_general_info.xml
@@ -41,6 +41,7 @@
             android:layout_gravity="bottom|end"
             android:layout_marginTop="@dimen/dp_16"
             android:layout_marginEnd="@dimen/dp_16"
+            android:layout_marginBottom="@dimen/dp_14"
             app:maxImageSize="@dimen/dp_40"
             app:srcCompat="@drawable/ic_swap_face"
             tools:ignore="ContentDescription" />
