--- a/features/tailormade_search/src/main/res/layout/layout_sort_and_filter.xml
+++ b/features/tailormade_search/src/main/res/layout/layout_sort_and_filter.xml
@@ -11,7 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingHorizontal="@dimen/dp_16"
-        android:paddingVertical="@dimen/dp_8">
+        android:paddingVertical="@dimen/dp_8"
+        app:singleSelection="true">
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chip_filter"
