--- a/features/tailormade_profile/src/main/res/layout/activity_tailor_profile.xml
+++ b/features/tailormade_profile/src/main/res/layout/activity_tailor_profile.xml
@@ -16,15 +16,16 @@
             android:id="@+id/top_toolbar_profile"
             style="@style/Theme.TailorMade.Toolbar.Back"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize" />
+            android:layout_height="?attr/actionBarSize"
+            app:title="Tailor Profile" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
     <include
         android:id="@+id/layout_profile_info"
-        layout="@layout/layout_card_profile"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        layout="@layout/layout_card_profile" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout_tailor_profile"
