--- a/features/tailormade_design_detail/src/main/res/layout/activity_design_detail.xml
+++ b/features/tailormade_design_detail/src/main/res/layout/activity_design_detail.xml
@@ -16,8 +16,7 @@
             android:id="@+id/top_toolbar_design_detail"
             style="@style/Theme.TailorMade.Toolbar.Back"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:menu="@menu/menu_item_design_detail" />
+            android:layout_height="?attr/actionBarSize" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
