FIX-SELECT-GENDER: Fix gender layout and fix sign in to send role to request
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_auth/src/main/res/drawable/drawable_anonymous_selector.xml
+++ b/features/tailormade_auth/src/main/res/drawable/drawable_anonymous_selector.xml
@@ -6,6 +6,7 @@
             android:tint="?attr/colorPrimary" />
     </item>
     <item android:state_checked="false">
-        <bitmap android:src="@drawable/drawable_anonymous" />
+        <bitmap android:src="@drawable/drawable_anonymous"
+            android:tint="@color/color_black_38" />
     </item>
 </selector>
