--- a/tailor-app/src/main/res/layout/layout_card_order_skeleton.xml
+++ b/tailor-app/src/main/res/layout/layout_card_order_skeleton.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="?attr/cardBackgroundColor"
     android:padding="@dimen/dp_12">
 
     <View
