--- a/tailor-app/src/main/res/layout/activity_main.xml
+++ b/tailor-app/src/main/res/layout/activity_main.xml
@@ -26,17 +26,14 @@
                 app:menu="@menu/menu_top_nav_main" />
         </com.google.android.material.appbar.AppBarLayout>
 
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/nav_host_main_fragment"
-            android:name="androidx.navigation.fragment.NavHostFragment"
+        <FrameLayout
+            android:id="@+id/frame_layout_content"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_0"
-            app:defaultNavHost="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/top_appbar_layout_main"
-            app:navGraph="@navigation/nav_main_graph" />
+            app:layout_constraintTop_toBottomOf="@id/top_appbar_layout_main" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
