--- a/tailor-app/src/main/res/layout/fragment_incoming_order.xml
+++ b/tailor-app/src/main/res/layout/fragment_incoming_order.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="@dimen/dp_64"
     tools:context=".feature.order.view.IncomingOrderFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_incoming_order"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/dp_72"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
