--- a/tailor-app/src/main/res/layout/fragment_recent_order.xml
+++ b/tailor-app/src/main/res/layout/fragment_recent_order.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="@dimen/dp_64"
     tools:context=".feature.order.view.RecentOrderFragment">
 
     <com.google.android.material.chip.ChipGroup
@@ -36,7 +37,6 @@
         android:id="@+id/recycler_view_recent_order"
         android:layout_width="@dimen/dp_0"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/dp_72"
         app:layout_constraintTop_toBottomOf="@id/chip_group_filter_order"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
