--- a/features/tailormade_chat/src/main/res/layout/layout_card_chat.xml
+++ b/features/tailormade_chat/src/main/res/layout/layout_card_chat.xml
@@ -27,6 +27,7 @@
             android:layout_width="@dimen/dp_0"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_8"
+            android:maxLines="2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/text_view_chat_name"
