--- a/libraries/tailormade_dls/src/main/res/layout/layout_spin_button_number.xml
+++ b/libraries/tailormade_dls/src/main/res/layout/layout_spin_button_number.xml
@@ -21,7 +21,7 @@
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/dp_40"
-            android:enabled="false"
+            android:clickable="false"
             android:minWidth="@dimen/dp_0"
             android:paddingHorizontal="@dimen/dp_16"
             android:text="@string/spin_number_value_label" />
