--- a/app/src/main/res/layout/fragment_thanks_for_order.xml
+++ b/app/src/main/res/layout/fragment_thanks_for_order.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/dp_16"
     android:orientation="vertical"
+    android:paddingBottom="@dimen/dp_16"
     tools:context=".feature.checkout.view.ThanksForOrderFragment">
 
     <ImageView
