FIX_FACE_SWAP: - Move face swap dynamic to app module - Add missing file - Fix library dlib and opencv - Fix bitmap converter = Add skeleton for face swap
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/libraries/tailormade_dls/src/main/res/values/dimens.xml
+++ b/libraries/tailormade_dls/src/main/res/values/dimens.xml
@@ -18,6 +18,7 @@
     <dimen name="sp_8">8sp</dimen>
 
     <dimen name="dp_600">600dp</dimen>
+    <dimen name="dp_500">500dp</dimen>
     <dimen name="dp_400">400dp</dimen>
     <dimen name="dp_240">240dp</dimen>
     <dimen name="dp_200">200dp</dimen>
