--- a/app/src/main/res/layout/layout_card_history_detail_order_info_skeleton.xml
+++ b/app/src/main/res/layout/layout_card_history_detail_order_info_skeleton.xml
@@ -12,35 +12,35 @@
         android:layout_height="@dimen/dp_16"
         android:background="@drawable/drawable_rounded_view" />
 
-    <TextView
+    <View
         android:id="@+id/text_view_history_detail_order_id"
         android:layout_width="@dimen/dp_120"
         android:layout_height="@dimen/dp_20"
         android:layout_marginTop="@dimen/dp_4"
         android:background="@drawable/drawable_rounded_view" />
 
-    <TextView
+    <View
         android:id="@+id/text_view_history_detail_order_by_label"
         android:layout_width="@dimen/dp_64"
         android:layout_height="@dimen/dp_16"
         android:layout_marginTop="@dimen/dp_16"
         android:background="@drawable/drawable_rounded_view" />
 
-    <TextView
+    <View
         android:id="@+id/text_view_history_detail_order_by"
         android:layout_width="@dimen/dp_100"
         android:layout_height="@dimen/dp_20"
         android:layout_marginTop="@dimen/dp_4"
         android:background="@drawable/drawable_rounded_view" />
 
-    <TextView
+    <View
         android:id="@+id/text_view_history_detail_order_date_label"
         android:layout_width="@dimen/dp_80"
         android:layout_height="@dimen/dp_16"
         android:layout_marginTop="@dimen/dp_16"
         android:background="@drawable/drawable_rounded_view" />
 
-    <TextView
+    <View
         android:id="@+id/text_view_history_detail_order_date"
         android:layout_width="@dimen/dp_64"
         android:layout_height="@dimen/dp_20"
