--- a/libraries/tailormade_dls/src/main/res/layout/layout_card_profile_skeleton.xml
+++ b/libraries/tailormade_dls/src/main/res/layout/layout_card_profile_skeleton.xml
@@ -11,7 +11,7 @@
         android:layout_width="@dimen/dp_64"
         android:layout_height="@dimen/dp_64"
         android:background="@drawable/drawable_rounded_view"
-        app:layout_constraintBottom_toBottomOf="@id/button_chat_tailor"
+        app:layout_constraintBottom_toBottomOf="@id/view_chat_tailor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/text_view_profile_name" />
 
@@ -32,12 +32,12 @@
         android:layout_marginStart="@dimen/dp_16"
         android:layout_marginTop="@dimen/dp_4"
         android:background="@drawable/drawable_rounded_view"
-        app:layout_constraintBottom_toTopOf="@+id/button_chat_tailor"
+        app:layout_constraintBottom_toTopOf="@+id/view_chat_tailor"
         app:layout_constraintStart_toEndOf="@id/image_view_profile"
         app:layout_constraintTop_toBottomOf="@+id/text_view_profile_name" />
 
     <View
-        android:id="@+id/button_chat_tailor"
+        android:id="@+id/view_chat_tailor"
         android:layout_width="@dimen/dp_100"
         android:layout_height="@dimen/dp_40"
         android:layout_marginStart="@dimen/dp_16"
